# flask-starter

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/flaskstarter/: __init__.py  routes.py  run.py
src/flaskstarter/templates/: index.html
tests/: conftest.py  test_starter.py
